package zoo;

public interface Feedable {
    void eat(String food);
}
