@startuml
class zoo.Parrot {
+ String makeSound()
+ void eat(String)
}

class zoo.Mammal {
- boolean hasFur
+ String makeSound()
+ void eat(String)
}


abstract class zoo.Animal {
- String name
- int age
+ String getName()
+ void setName(String)
+ int getAge()
+ void setAge(int)
+ {abstract}String makeSound()
}


interface zoo.Feedable {
~ void eat(String)
}

class zoo.Elephant {
+ String makeSound()
+ void eat(String)
}

class zoo.Lion {
+ String makeSound()
+ void eat(String)
}



zoo.Feedable <|.. zoo.Parrot
zoo.Animal <|-- zoo.Parrot
zoo.Animal <|-- zoo.Mammal
zoo.Feedable <|.. zoo.Animal
zoo.Feedable <|.. zoo.Elephant
zoo.Mammal <|-- zoo.Elephant
zoo.Feedable <|.. zoo.Lion
zoo.Mammal <|-- zoo.Lion
@enduml